# KidPhotoViewerQt

./: CMakeLists.txt  KidPhotoViewer.cpp  KidPhotoViewer.h  README.md  main.cpp
